# aws-automatisation

./: README.md  pyproject.toml
src/: .env  init.py  main.py
src/Bucket/: bucket_exist.py  create_bucket.py  delete_bucket.py  deploy_to_s3.py  list_bucket.py
src/Bucket/Policy/: asign_policy.py  multiple_policy.py  public_read_policy.py  read_bucket_policy.py
src/Object/: add_lifecycle_policy.py  delete_object.py  download_file_and_upload_to_s3.py  multipart_upload.py  set_object_access_policy.py  upload_file.py  upload_file_obj.py  upload_file_put.py
